force-app/main/default/objects/Debt_Finding__c/Debt_Finding__c.object-meta.xml
<CustomObject>
    <label>Debt Finding</label>
    <nameField>
        <displayFormat>DF-{00000}</displayFormat>
        <label>Debt Finding Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debt Findings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>