force-app/main/default/objects/Debt_Finding__c/fields/AutoFixable__c.field-meta.xml
<CustomField>
    <fullName>AutoFixable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AutoFixable</label>
    <type>Checkbox</type>
</CustomField>