force-app/main/default/objects/Debt_Finding__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unused Field</fullName>
            </value>
            <value>
                <fullName>Orphaned Flow</fullName>
            </value>
            <value>
                <fullName>Low Test Coverage</fullName>
            </value>
            <value>
                <fullName>Hardcoded Id</fullName>
            </value>
            <value>
                <fullName>Naming Convention</fullName>
            </value>
            <value>
                <fullName>Security Gap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>