force-app/main/default/objects/Debt_Finding__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <label>Component Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>