force-app/main/default/objects/Debt_Finding__c/fields/Org_Scan__c.field-meta.xml
<CustomField>
    <fullName>Org_Scan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Org Scan</label>
    <referenceTo>Org_Scan__c</referenceTo>
    <relationshipLabel>Debt Findings</relationshipLabel>
    <relationshipName>Debt_Findings</relationshipName>
    <type>Lookup</type>
</CustomField>